fixed growth mindset hover scss and posaition down to 320px, fixed footer padding and spacing in lower resolution

--- a/src/app/comments/comments.component.scss
+++ b/src/app/comments/comments.component.scss
@@ -66,7 +66,8 @@
             background: rgb(38, 82, 75);
             border-radius: 10px;
             max-width: 600px;
-            padding-bottom: 53px;
+            padding-top: 12px;
+            padding-bottom: 32px;
             color: #fff;
             font-size: 18px;
             position: relative;
